--- a/package.json
+++ b/package.json
@@ -1,28 +1,22 @@
 {
-  "name": "@kwuasimoto/toaster",
-  "author": "Kwuasimoto",
+  "name": "@moto/toaster",
   "version": "0.0.1",
-  "description": "A super simple toaster for solidjs",
+  "description": "Simple toaster for SolidJS",
   "main": "src/index.ts",
   "files": [
     "src/**/*"
   ],
-  "scripts": {
-    "start": "vite",
-    "dev": "vite",
-    "build": "vite build",
-    "serve": "vite preview"
-  },
-  "license": "AGPL-3.0-or-later",
   "devDependencies": {
-    "solid-devtools": "^0.27.3",
-    "typescript": "^5.1.3",
-    "vite": "^4.3.9",
-    "vite-plugin-solid": "^2.7.0"
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "solid-js": "^1.7.6"
   },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "kwuasimoto",
+  "license": "AGPL-3.0-or-later",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Kwuasimoto/moto-toaster.git"
