--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "@moto/toaster",
+  "name": "moto-toaster",
   "version": "0.0.1",
   "description": "Simple toaster for SolidJS",
   "main": "src/index.ts",
-  "private": "false",
   "files": [
     "src/**/*"
   ],
